# mbajk-ml-2

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.dvc/: config
models/: dvorana_tabor_processed_data_model.h5  europark_-_pobreska_c._processed_data_model.h5  gorkega_ul._-_os_franceta_preserna_processed_data_model.h5  gosposvetska_c._-_iii._gimnazija_processed_data_model.h5  gosposvetska_c._-_turnerjeva_ul._processed_data_model.h5  gosposvetska_c._-_vrbanska_c._processed_data_model.h5  jhmb_–_dvoetazni_most_processed_data_model.h5  koroska_c._-_koroski_veter_processed_data_model.h5  lidl_-_koroska_c._processed_data_model.h5  lidl_-_titova_c._processed_data_model.h5  ljubljanska_ul._-_focheva_processed_data_model.h5  ljubljanska_ul._-_ii._gimnazija_processed_data_model.h5  mbajk_processed_model.h5  mladinska_ul._-_trubarjeva_ul._processed_data_model.h5  mlinska_ul_._-_avtobusna_postaja_processed_data_model.h5  model.h5  na_poljanah_-_heroja_sercerja_processed_data_model.h5  nicehash_-_c._proletarskih_brigad_processed_data_model.h5  nkbm_-_trg_leona_stuklja_processed_data_model.h5  partizanska_c._-_cankarjeva_ul._processed_data_model.h5  partizanska_c._-_tic_processed_data_model.h5  partizanska_c._-_zelezniška_postaja_processed_data_model.h5  petrol_–_lent_–_vodni_stolp_processed_data_model.h5  pošta_-_slomskov_trg_processed_data_model.h5  razlagova_ul._-_obcina_processed_data_model.h5  scaler.joblib  spar_-_trznica_tabor_processed_data_model.h5  strossmayerjeva_ul._-_trznica_processed_data_model.h5  ulica_mose_pijada_-_ukc_processed_data_model.h5  (+3 more)
(+169 files in other folders)
