[tool.poetry]
name = "mbajk-ml"
version = "0.1.0"
description = "MBajk Machine Learning"
authors = ["Haris Brulic <haris.brulic@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
tensorflow = "^2.16.1"
keras = "^3.1.1"
matplotlib = "^3.8.4"
flask = "^3.0.3"
flask-restx = "^1.3.0"
werkzeug = "^3.0.2"
flasgger = "^0.9.7.1"
fastapi = "^0.110.1"
pytest = "^8.1.1"
cors = "^1.0.1"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

